# hkrpg_change_server

./: Cargo.toml
assets/Game/: sdk_pkg_version
assets/Game/StarRail_Data/Plugins/: failedlog.db  license.txt
src/: main.rs
src/starrail/: game_config.rs  game_path.rs  mod.rs
