[package]
name = "hksr_channel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
rust-ini = "0.21.0"
widestring = "1.1.0"
winreg = "0.52.0"
winapi = { version = "0.3.9", features = ["winuser", "shellapi"] }
